--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <application
+        android:name=".App"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -14,6 +15,10 @@
         tools:targetApi="31">
         <activity
             android:name=".TestActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".SampleTitleActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
