添加状态栏控制扩展

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,11 @@
         <activity
             android:name=".SampleTitleActivity"
             android:exported="false" />
+
+        <activity
+            android:name=".ImmerseActivity"
+            android:exported="false"
+           />
         <activity
             android:name=".MainActivity"
             android:exported="true">
