--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".App"
         android:allowBackup="true"
@@ -12,6 +14,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.BaseDemo"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
             android:name=".TestActivity"
@@ -23,8 +26,7 @@
 
         <activity
             android:name=".ImmerseActivity"
-            android:exported="false"
-           />
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
